# moninfo

./: .gitignore  Cargo.toml  PKGBUILD  README.md  moninfo
.cargo/: config
.github/workflows/: ci.yml
src/: main.rs
